--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -9,9 +9,10 @@ jobs:
   update-gist:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: Update gist
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: ${{ secrets.GIST_ID }}
-          TIMEZONE: Asia/Seoul
+          LOCALE: ko-KR
